2011-xx-xx:
    * version 3.1
    * IMPORTANT: PASSTHROUGH mode has been reworked. Press 'i' to ignore a single
      key, and "Shift-Esc" or "Insert" to toggle vimperator completely.
    * IMPORTANT: Ctrl-c/x/v/z do their expected thing now. We managed that by just
      reshuffling some commands.
    * IMPORTANT: CARET mode is now activated with 'c' instead of 'i'
    * IMPORTANT: :viusage, :exusage and :optionusage (and the manually created
      index of all commands in the helpfile) have been replaced by a single
      :usage command.
    * Vimperator's command line is now a fully supported toolbar. This means you
      can just right click it, select "Customize", and drag'n drop any
      items in the command line like the combined back/forward button and
      get rid of the default address bar. Thanks caisui for the patch!
    * Error messages have more consistent wording now, also got rid of Exxx error
      codes, as we never supported those in the help files anyway.
    * Vimperator works around Firefox's tab scrolling now. So the minimum
      tab width is now just 16px anymore, and you are much more unlikely to
      see scrollbars in the tab bar.
    * No longer show the command after executing an ex command. Just
      fade out quickly now and make room for the status items.
    * Add 'apptab' option for pin/unpin the current tab.
    * Add 'messagetimeout' option to automatically hide messages after a timeout
    * :tabclose! behavior is changed: Instead of focusing left tab, force closing
      of a tab - even if it is an AppTab.
    * Bug fixes

2011-03-06:
    * version 3.0
    * IMPORTANT: The statusbar and command line have been merged in a single
      row as also Firefox 4 hides the statusbar by default now
    * IMPORTANT: By default, we don't change Firefox's default UI anymore!
      This was done since Firefox 4 has indeed a very minimal GUI and the Firefox