@@ -1,4 +1,4 @@
-2011-xx-xx:
+2011-xx-xx: "The Return Of Copy And Paste"
     * version 3.1
     * IMPORTANT: PASSTHROUGH mode has been reworked. Press 'i' to ignore a single
       key, and "Shift-Esc" or "Insert" to toggle vimperator completely.
@@ -8,10 +8,17 @@
     * IMPORTANT: :viusage, :exusage and :optionusage (and the manually created
       index of all commands in the helpfile) have been replaced by a single
       :usage command.
+    * IMPORTANT: The multiline output has been reworked to make it more
+      clearer in which mode you are. This means, that while 'more' is the new
+      default, you have to explicitly close the output window with Esc or 'q'. This
+      has the advantage that you never have to guess if the next key like 'j' is
+      sent to the output window or to the page in case you are at the end of the output.
+      Therefore, also the 'more' option has been removed.
     * Vimperator's command line is now a fully supported toolbar. This means you
       can just right click it, select "Customize", and drag'n drop any
       items in the command line like the combined back/forward button and
       get rid of the default address bar. Thanks caisui for the patch!
+    * Boolean options can now also be set with :set option=true/false
     * Error messages have more consistent wording now, also got rid of Exxx error
       codes, as we never supported those in the help files anyway.
     * Vimperator works around Firefox's tab scrolling now. So the minimum
